# smallnet

./: .python-version  README.md  requirements.txt  setup.cfg
examples/: xor.py
smallnet/: neural_net.py  tensor.py  train.py
smallnet/data/: __init__.py  batch.py  data.py
smallnet/layers/: __init__.py  activation.py  layer.py  linear.py  relu.py  sigmoid.py  tanh.py
smallnet/loss/: __init__.py  loss.py  mean_squared.py
smallnet/model/: sequential.py
smallnet/optimiser/: __init__.py  optimiser.py  stochastic_gradient_descent.py
