[metadata]
name = smallnet
version = 0.0.1
author = Atishek
author_email = kumaratishek22@gmail.com
description = A functional deep learning library from scratch in python
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy,
    scipy
python_requires = >=3.6

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    smallnet

